# jurisdictions

./: .env.sample  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  FAQ.md  LICENSE  MODELS.md  README.md  main.py  ocdid_no_validation_asof_2026-02-01T02:55:04.887642+00:00.csv  ocdid_no_validation_asof_2026-02-01T03:00:51.325043+00:00.csv  ohio_jurisdictions_CONSOLIDATED.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: auto-merge-yaml.yml  ci.yml
ai_tools/: README.md  catalog.yaml
ai_tools/planning/: README.md  issue-14-generator-pipeline.md  stage1-ocdid-pipeline.instruction.md  stage2-generation-pipeline.instruction.md
ai_tools/planning/stage1-ocdid-pipeline-detailed-plans/: 2026-02-13-stage1-ocdid-pipeline-design.md  2026-02-15-stage1-ocdid-pipeline-implementation.md  2026-02-15-stage1-stage2-handoff-fixes.md  2026-02-15-stage1-verification-analysis.md
ai_tools/planning/stage1-odid-pipeline-detailed-plans/: 2026-02-15-stage1-verification-analysis.md
ai_tools/prompts/: create-design-and-implementation-plan.prompt.md
ai_tools/skills/: README.md
ai_tools/system/: agent-permissions.instruction.md  contributor-workflows.instruction.md  pre-commit-checks.instruction.md  repo-agent-system.instruction.md
ai_tools/tasks/: feature-delivery.instruction.md
ai_tools/templates/: instruction.template.md  prompt.template.md
data/: ocdid_uuid_lookup.csv
data/tx/local/: jurisdictions.yml
divisions/: test_auto_merge.yaml
divisions/divisions/wa/: washington_stub.yaml
divisions/examples/: Miamisburg_0000000_3fa85f64-5717-4562-b3fc-2c963f66afa7.yaml  Parma_0000000_3fa85f64-5717-4562-b3fc-2c963f66afa6.yaml
docs/: YAML_AUTO_MERGE_QUICK_REFERENCE.md  YAML_AUTO_MERGE_WORKFLOW.md  contributor-workflows.md  data_model_relationships.md  deterministic_ids.md  example_code_in_production_module.md  example_ocdid_div_jur_relationships.md  init_research_pipeline.md  integration_testing_data.md  ocdid_matching_criteria.md  setup_uv.md  yaml_manager.md
docs/plans/: 2026-02-13-stage1-ocdid-pipeline-design.md  2026-02-15-stage1-ocdid-pipeline-implementation.md
jurisdictions/jurisdictions/wa/: washington_stub.yaml
src/: __init__.py  errors.py  import_divisions.py  jurisdictions_sample.py  sample_divisions.py
src/crudl/: README.md  __init__.py  yaml_manager.py
src/data/: lsad_map.json  lsad_mapper.py  state_lookup.json
src/init_migration/: download_manager.py  downloader.py  generate_division.py  generate_jurisdiction.py  generate_pipeline.py  generate_recursive.py  geoid_exception.py  get_ocdid_files.py  get_ocdid_files_new.py  import_divisions.py  import_master_ocdid_file.py  jurisdiction_seed.py  main.py  mappers.py  models.py  ocdid_matcher.py  old_import_divisions.py  orchestrator.py  parsers.py  pipeline.py  pipeline_generate_div.py  pipeline_models.py
src/models/: __init__.py  division.py  division_example.py  jurisdiction.py  ocdid.py  source.py
src/openstates_jurisdictions.egg-info/: PKG-INFO  SOURCES.txt
src/utils/: __init__.py  csv_utils.py  datetime.py  deterministic_id.py  ocdid.py  place_name.py  state_lookup.py  str_utils.py  yaml_manager.py
tests/: conftest.py  jurisdictions_sample.py  test_async_downloader_integration.py  test_downloader_cache.py  test_downloader_config.py  test_downloader_core.py  test_downloader_errors.py  test_downloader_github.py  test_env.py  test_main.py  test_yaml_manager.py
tests/fixtures/: divisions_sample.py  jurisdictions_sample.py
tests/integration/: test_async_downloader_integration.py  test_generate_pipeline_integration.py  test_main_integration.py  test_stage1_integration.py
tests/sample_data/: WA_TX_OH_sample.csv  ohio_jurisdictions_licking_county.py  random_sample_by_LSAD_STATEFP.csv  random_sample_validation_records.py  sample_divisions.py  sample_validation_records.py  testing_creyton_sample.csv  testing_ocd_sample.csv
tests/sample_output/: README.md  divisions.json  jurisdictions.json
tests/src/init_migration/: conftest.py  test_download_manager.py  test_downloader_cache.py  test_downloader_config.py  test_downloader_core.py  test_downloader_errors.py  test_downloader_github.py  test_generate_division.py  test_main_cli.py  (+10 more)
(+33 files in other folders)
