[project]
name = "jurisdictions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-i18n-address>=3.1.1",
    "pyaml>=25.7.0",
    "pydantic>=2.11.9",
    "polars>=1.33.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.2",
    "pytest-pythonpath>=0.7",
]

[tool.pytest.ini_options]
# Where pytest should look for tests (keep tests/ at repo root)
testpaths = ["tests"]
