[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openstates-jurisdictions"
version = "0.1.0"
description = "Standardized Division and Jurisdiction data for US local governments in the OpenStates ecosystem"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "CC0 1.0 Universal"}
authors = [
    {name = "Open States Contributors", email = "hello@openstates.org"}
]
keywords = [
    "civic-data",
    "government",
    "jurisdictions",
    "divisions",
    "open-civic-data",
    "ocd",
    "legislative-data",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Government",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "duckdb>=1.4.1",
    "google-i18n-address>=3.1.1",
    "httpx[http2]>=0.28.1",
    "pandas>=2.3.2",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "pyaml>=25.7.0",
    "pydantic>=2.11.9",
    "rapidfuzz>=3.0.0",
    "rich>=14.0.0",
]
[project.urls]
Homepage = "https://openstates.org"
Repository = "https://github.com/openstates/jurisdictions"
Documentation = "https://docs.openstates.org"
Issues = "https://github.com/openstates/jurisdictions/issues"
Changelog = "https://github.com/openstates/jurisdictions/blob/main/CHANGELOG.md"


[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.13.2",
    "pytest-pythonpath>=0.7",
    "hypothesis>=6.151.11",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = [
    "/src",
    "/tests",
    "/docs",
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "CONTRIBUTING.md",
]

[tool.hatch.build.targets.wheel.force-include]
"src/data/state_lookup.json" = "openstates_jurisdictions/data/state_lookup.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "asyncio: marks tests as asyncio-based async tests",
]
addopts = [
    "--strict-markers",
    "--verbose",
    "--color=yes",
]
